# Machine-Learning-For-Diffusion-Processes-In-Networks

./: .gitignore  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  README.md  SUPERVISOR_QUESTIONS.md  generate_networks.py  pyproject.toml  requirements-notebooks.txt  run_diffusion.py
configs/: default.yaml
data/cascades/: cascades.json
data/networks/: ba_network.graphml  complete_network.graphml  er_network.graphml
diffusion/: __init__.py  cascade_viz.py  simulator.py
networks/: __init__.py  visualizer.py
notebooks/: 01_network_exploration.ipynb  02_diffusion_exploration.ipynb  03_IC_on_complete_graph.ipynb  04_SI_on_erdos_renyi.ipynb  05_IC_on_erdos_renyi.ipynb  06_IC_on_barabasi_albert.ipynb
scripts/: __init__.py  generate_networks.py  predict_patient_zero_ic.py  run_simulation.py  train_rf_ic_complete.py
scripts/experiments/: train_rf_ic_ba.py  train_rf_ic_complete.py  train_rf_ic_er.py
src/: __init__.py  baselines.py  evaluate.py  features.py  match_size.py  models.py  preprocess.py  simulate.py  utils.py  viz.py
src/baselines/: __init__.py  centrality.py
src/data/: __init__.py  cascade.py  networks.py  simulate.py
src/diffusion/: __init__.py  simulator.py
src/evaluation/: __init__.py  metrics.py
src/features/: __init__.py  extract.py  preprocess.py
src/models/: __init__.py  random_forest.py
src/networks/: __init__.py  generate_networks.py  generator.py
src/visualization/: __init__.py  cascades.py  networks.py
