[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "patient-zero"
version = "0.1.0"
description = "Source detection in diffusion cascades — predicting Patient Zero from undirected cascade observations"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.3",
    "pandas>=2.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "jupyter>=1.0",
]

[project.scripts]
generate-networks = "scripts.generate_networks:main"
run-simulation    = "scripts.run_simulation:main"

[tool.hatch.build.targets.wheel]
packages = ["src", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py310"
